k8s/nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dep
  namespace: app
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /vat/www/html
          name: data
        volumes:
          -name: data
          persistentVolumeClaim:
            claimName: my-pvc
