k8s/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app
spec:
  selector:
    app: nginx
  ports:
    -protocol: TCP
     port: 80
     targetPort: 80
  type: ClusterIP
